--- a/styles/board/post/post-nav-sidebar.module.css
+++ b/styles/board/post/post-nav-sidebar.module.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: fixed;
+    position: absolute;
     top: 0;
     z-index: 101;
     width: 7rem;
@@ -20,7 +20,7 @@
 }
 
 .dim {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     z-index: 100;
