FIX: 커뮤니티 레이아웃 깨지는 문제

--- a/styles/board/board.module.css
+++ b/styles/board/board.module.css
@@ -103,7 +103,7 @@
 }
 
 .write {
-    position: absolute;
+    position: fixed;
     bottom: 2rem;
     right: 2rem;
     background-color: var(--level-4);
