--- a/styles/board/post/post.module.css
+++ b/styles/board/post/post.module.css
@@ -1,11 +1,11 @@
 .post {
     position: absolute;
-    overflow: hidden;
+    z-index: 1;
     width: 100%;
     height: 100%;
     top: 0;
     left: 100%;
-    padding: 15rem .5rem 1rem;
+    padding: 5rem .5rem 1rem;
     background-color: var(--level-1);
     transition: .25s;
 }
@@ -99,7 +99,7 @@
 @media screen and (min-width: 0) and (max-width: 750px) {
 
     .post {
-        padding: 6.5rem .5rem 1rem;
+        padding: 2rem .5rem 1rem;
     }
 
     .post_info {
