--- a/styles/globals.css
+++ b/styles/globals.css
@@ -156,13 +156,22 @@ body.dark {
   height: calc(1vh * 100);
 }
 
+@media screen and (max-width: 650px) {
+  .wrap {
+    grid-template-areas: 
+    "header header"
+    "content content";
+  }
+}
+  
 main {
   position: relative;
   grid-area: content;
   border-radius: 1rem 0 0;
   background-color: var(--level-0);
   filter: var(--drop-shadow);
-  overflow: hidden;
+  overflow: hidden !important;
+  overflow-y: overlay !important;
 }
 
 body.dark main {
