--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -59,6 +59,7 @@
   display: flex;
   justify-content: space-between;
   position: relative;
+  height: 100%;
 }
 
 .top_menu_bar :is(.left, .right) {
