--- a/styles/meal.module.css
+++ b/styles/meal.module.css
@@ -102,7 +102,7 @@ body:global(.dark)
 .meal_info.green {background-color: var(--green);}
 
 .notification_button {
-    position: fixed;
+    position: absolute;
     z-index: 1;
     right: 3rem;
     bottom: 3rem;
