--- a/styles/board/post/post.module.css
+++ b/styles/board/post/post.module.css
@@ -2,7 +2,7 @@
     position: absolute;
     z-index: 1;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     top: 0;
     left: 100%;
     padding: 5rem .5rem 1rem;
@@ -48,6 +48,10 @@
 }
 
 .post_write_wrap {
+  height: 100%;
+}
+
+.post_write {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -55,7 +59,7 @@
     height: 100%;
 }
 
-.post_write_wrap > * {
+.post_write > * {
     width: 100%;
 }
 
